# annotate_das

./: TODO.txt  display_table_results.py  fix_SQL_tables.py  prompt_tmp.txt  pyproject.toml
src/annotate/: config.py  data_manager.py  main.py  main_window.py  readme.txt  run_annotate.py
src/annotate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/annotate/panels/: __init__.py  control_panel.py  fx_plot_panel.py  fx_series_panel.py  spectrogram_panel.py  text_display_panel.py  tx_plot_panel.py
